<resources>
    <string name="app_name">StudyWithMobile</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="confirm">Confirm</string>
    <string name="student">student</string>
    <string name="teacher">teacher</string>

    <string name="default_slide_title">Today\'s Pick!</string>
    <string name="teacher_content">%1s Teacher for %2s</string>
    <string name="loading">loading…</string>
    <string name="end">END</string>
    <string name="today_class">Class</string>

    <string name="temp_student_login">Student Login</string>
    <string name="temp_teacher_login">Teacher Login</string>

    <string name="permission_title">App permissions</string>
    <string name="permission_subtext">We need below permissions to use this app</string>

    <string name="permission_camera">Camera</string>
    <string name="permission_camera_sub">camera sub</string>
    <string name="permission_picture">Picture</string>
    <string name="permission_picture_sub">picture sub</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_storage_sub">storage sub</string>
    <string name="permission_mic">MIC</string>
    <string name="permission_mic_sub">mic sub</string>

    <string name="home_slide_1_student">slide_student_1.jpg</string>
    <string name="home_slide_2_student">slide_student_2.jpg</string>

    <string name="home_slide_1_title">.</string>
    <string name="home_slide_1">slide1.jpg</string>

    <string name="home_slide_2_title">.</string>
    <string name="home_slide_2">slide2.jpg</string>

    <string name="home_slide_3_title">Play free recommended video!</string>
    <string name="home_slide_3">slide3.jpg</string>

    <string name="home_slide_4_title">Study with Me for students and teachers!</string>
    <string name="home_slide_4">slide4.jpg</string>

    <string name="sample">sample</string>

    <string name="live_status_none">Class isn\'t on live status</string>
    <string name="search_student">Search for your student</string>
    <string name="search_teacher">Search for your teacher</string>
    <string name="notice">Notice</string>

    <string name="seoul">서울</string>
    <string name="today_class_title">오늘의 학습</string>
    <string name="covid_title">Covid-19</string>
    <string name="are_you_feeling_sick">Are you feeling sick?</string>
    <string name="affected">Affected</string>
    <string name="death">Death</string>
    <string name="exam">Test</string>
    <string name="care">Care</string>
    <string name="definite">Definite</string>
    <string name="call_for_help">If you feel sick with any of covid-19 symptoms please call or SMS us immediately for help.</string>
    <string name="call_now">Call Now</string>
    <string name="message_now">Send Message</string>
    <string name="today">Today</string>
    <string name="prevention">Prevention</string>
    <string name="avoid_close_n_contact">Avoid close\n contact</string>
    <string name="open_source_license">Open Source License</string>
    <string name="wash_your_hand">Wash your\n hand</string>
    <string name="keep_your_mask_on">Keep your\n mask on</string>
    <string name="notion_corona_info">https://fossil-feeling-b2c.notion.site/StudyWithMobile-d6b9f052e49748198053db62cb0f4fc5</string>
    <string name="user_profile">User information</string>
    <string name="email_id">Email ID</string>
    <string name="email_id_hint">Please enter in email format</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password here</string>
    <string name="user_name">User Name</string>
    <string name="user_type">Select user type</string>
    <string name="done">DONE</string>
    <string name="password_error">Wrong Password</string>
    <string name="user_create_error">User creatation error</string>
    <string name="phone_number">Phone number</string>
</resources>