<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.corona.CoronaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:paddingTop="@dimen/big_margin"
            android:background="@drawable/bg_radious_bottom_only">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_title"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="@string/covid_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/small_margin"
                android:textColor="@color/colorWhite"
                android:text="@string/are_you_feeling_sick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorWhite"
                android:text="@string/call_for_help"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/call_phone"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_radious"
                    android:backgroundTint="@color/colorRed"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/call_now" />

                <TextView
                    android:id="@+id/text_message"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_radious"
                    android:backgroundTint="@color/colorBlue"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/message_now" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/today" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <include
                    android:id="@+id/affected"
                    layout="@layout/item_corona_card"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="56dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <include
                    android:id="@+id/exam"
                    layout="@layout/item_corona_card"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="56dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/affected"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <include
                    android:id="@+id/death"
                    layout="@layout/item_corona_card"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/care"
                    app:layout_constraintEnd_toEndOf="parent" />

                <include
                    android:id="@+id/care"
                    layout="@layout/item_corona_card"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/death"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toEndOf="@+id/def_rate" />

                <include
                    android:id="@+id/def_rate"
                    layout="@layout/item_corona_card"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/care"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prevention"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_view_social"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/socialdistancing"
                app:layout_constraintEnd_toEndOf="@+id/guide_avoid_contact"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guide_avoid_contact"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guide_avoid_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:gravity="center"
                android:text="@string/avoid_close_n_contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_protection"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="52dp"
                android:src="@drawable/protection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toEndOf="@+id/img_view_social"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guide_mask_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/keep_your_mask_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/guide_avoid_contact"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_wash_hand"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="52dp"
                android:src="@drawable/handgel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toEndOf="@+id/iv_protection"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/guide_wash_hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wash_your_hand"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/guide_mask_on"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toEndOf="@+id/guide_mask_on" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:srcCompat="@drawable/covidbanner" />
    </LinearLayout>
</ScrollView>