<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_actionbar_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhiteGrey"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:text="@string/confirm">
        </Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_above="@id/btn_next">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="63dp"
                android:layout_marginBottom="43dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_title"
                    android:textSize="18dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:gravity="top" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/permission_subtext"
                    android:textSize="14dp"
                    android:textColor="@color/colorWhite"
                    android:gravity="top" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
